--- a/package.json
+++ b/package.json
@@ -1,10 +1,13 @@
 {
   "devDependencies": {
-    "@beynd/commitizen-config": "^1.2.5"
+    "@beynd/commitizen-config": "^1.2.6"
   },
   "config": {
     "commitizen": {
       "path": "cz-conventional-changelog"
     }
+  },
+  "scripts": {
+    "commit": "cz"
   }
 }
