--- a/pom.xml
+++ b/pom.xml
@@ -6,13 +6,13 @@
 
     <parent>
         <groupId>beynd.architecture</groupId>
-        <artifactId>parent</artifactId>
-        <version>1.2.0</version>
+        <artifactId>beynd-spring-parent</artifactId>
+        <version>3.0.0</version>
         <relativePath/>
     </parent>
 
-    <artifactId>platform</artifactId>
-    <version>1.8.0-SNAPSHOT</version>
+    <artifactId>beynd-platform</artifactId>
+    <version>2.0.0-SNAPSHOT</version>
     <packaging>jar</packaging>
     <name>platform</name>
     <description>Shared architecture platform library for Beynd microservices</description>
